alpine.yaml
apiVersion: v1
kind: Pod
metadata:
 name: pod-default
# namespace: test
 annotations:
    sidecar.istio.io/inject: "false"
spec:
# ServiceAccountName: testsa
 containers:
 - name: alpine-curl
   image: byrnedo/alpine-curl
   command:
     - "sleep"
     - "10000"
