backend-vs1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authnz-backend
  namespace: bar	
spec:
  hosts:
    - authnz-backend.bar.svc.cluster.local
  http:

  - route:
    - destination:
        host: authnz-backend.bar.svc.cluster.local
        subset: v1
      weight: 50
    - destination:
        host: authnz-backend.bar.svc.cluster.local
        subset: v2
#        port:
#          number: 80
      weight: 50
