frontend-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: authnz-frontend
  namespace: foo
spec:
  host: authnz-frontend.foo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
#  - name: v2
#    labels:
#      version: v2
---
